[package]
name = "zeroctx-tuner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["sched", "mount", "signal", "fs"] }
libbpf-rs = "0.25"
libbpf-sys = "1.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread","macros","signal","time","sync","fs"] }
futures = "0.3.31"
tokio-util = "0.7.16"

time = "0.3"
bitvec = "1.0.1"c
nalgebra = { version = "0.33", default-features = true, features = ["std"] }
rand = "0.8"


[build-dependencies]
libbpf-cargo = "0.25"
